--- a/app/src/main/res/layout/fragment_by_dates.xml
+++ b/app/src/main/res/layout/fragment_by_dates.xml
@@ -6,12 +6,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="24dp">
+        android:orientation="vertical">
 
         <lecho.lib.hellocharts.view.LineChartView
             android:id="@+id/chart"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="300dp" />
     </LinearLayout>
 </ScrollView>
