--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,9 +84,10 @@
                 android:background="@color/dividerColor" />
 
             <Spinner
+                android:id="@+id/period_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:entries="@array/periods_array"
+                android:entries="@array/periods_strings"
                 android:padding="8dp" />
         </LinearLayout>
 
