--- a/app/src/main/res/layout/fragment_by_dates.xml
+++ b/app/src/main/res/layout/fragment_by_dates.xml
@@ -6,11 +6,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:orientation="vertical">
 
         <lecho.lib.hellocharts.view.LineChartView
             android:id="@+id/chart"
             android:layout_width="match_parent"
-            android:layout_height="300dp" />
+            android:layout_height="400dp" />
     </LinearLayout>
 </ScrollView>
