Inflated banks recycler view

--- a/app/src/main/res/layout/item_bank.xml
+++ b/app/src/main/res/layout/item_bank.xml
@@ -61,6 +61,6 @@
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/ask"
         android:layout_below="@+id/ask"
-        tools:text="+005" />
+        android:text="+005" />
 </RelativeLayout>
 
