--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -20,7 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button"
-            android:onClick="testRequest"/>
+            android:onClick="testRequest"
+            android:visibility="gone"/>
     </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
