--- a/app/src/main/res/layout/fragment_average_today.xml
+++ b/app/src/main/res/layout/fragment_average_today.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,98 +11,118 @@
         android:padding="8dp"
         android:orientation="vertical">
 
+        <TextView
+            android:text="@string/today"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvToday"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
+
+        <android.support.v7.widget.CardView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="8dp"
+            card_view:cardCornerRadius="4dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="16dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_stop"
+                    android:id="@+id/imgArrow"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentBottom="true"/>
+
+                <TextView
+                    android:id="@+id/average_currency"
+                    style="@style/TextAppearance.AppCompat.Display3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="27.02"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    />
+
+                <TextView
+                    android:text="@string/for_one"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tvFor"
+                    android:layout_toRightOf="@+id/average_currency"
+                    android:layout_alignBottom="@+id/average_currency"
+                    android:layout_marginBottom="8dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"/>
+
+                <TextView
+                    android:id="@+id/average_currency_diff"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="+0.20"
+                    android:layout_below="@+id/average_currency"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    style="@style/Base.TextAppearance.AppCompat.Large"
+                    android:layout_toRightOf="@+id/imgArrow"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginLeft="8dp"/>
+
+                <TextView
+                    style="@style/TextAppearance.AppCompat.Display3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingEnd="8dp"
+                    android:paddingRight="8dp"
+                    android:text="@string/one"
+                    android:id="@+id/tvOne"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                    android:layout_alignBottom="@+id/average_currency"
+                    android:layout_toRightOf="@+id/tvFor"
+                    android:layout_toEndOf="@+id/tvFor"
+                    android:textColor="@color/mdtp_transparent_black"/>
+
+                <TextView
+                    android:text="@string/in_avg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tvInAvg"
+                    android:layout_alignBottom="@id/average_currency_diff"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:layout_marginLeft="8dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"/>
+
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <TextView
+            android:text="@string/average_in_banks"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvAverageInBanks"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
+
         <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            card_view:cardBackgroundColor="#E6E6E6"
-            card_view:cardCornerRadius="8dp"
-            card_view:cardElevation="8dp">
+            android:layout_marginTop="8dp"
+            card_view:cardCornerRadius="4dp">
 
-            <LinearLayout
+            <GridLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="24dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            style="@style/TextAppearance.AppCompat.Large"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Average currency"
-                            android:textColor="@color/grey800" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="UAH/USD" />
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:orientation="horizontal"
-                        android:paddingTop="24dp">
-
-                        <TextView
-                            style="@style/TextAppearance.AppCompat.Headline"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingEnd="8dp"
-                            android:paddingRight="8dp"
-                            android:text="@string/dollar_symbol" />
-
-                        <TextView
-                            android:id="@+id/average_currency"
-                            style="@style/TextAppearance.AppCompat.Headline"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:textAlignment="gravity"
-                            tools:text="27.02" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/average_currency_diff"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        tools:text="+0.20"
-                        tools:textColor="@android:color/holo_green_light" />
-                </LinearLayout>
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            card_view:cardBackgroundColor="#E6E6E6"
-            card_view:cardCornerRadius="8dp"
-            card_view:cardElevation="8dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="24dp">
+                android:layout_height="match_parent"
+                android:columnCount="1"
+                android:layout_margin="16dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -109,60 +130,34 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        style="@style/TextAppearance.AppCompat.Large"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Currencies by common banks"
-                        android:textColor="@color/grey800" />
+                        android:layout_weight="1" />
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        style="@style/TextAppearance.AppCompat.Caption"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="UAH/USD" />
+                        android:layout_weight="0.5"
+                        android:gravity="center"
+                        android:text="Ask" />
+
+                    <TextView
+                        style="@style/TextAppearance.AppCompat.Caption"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.5"
+                        android:gravity="center"
+                        android:text="Bid" />
                 </LinearLayout>
 
-                <GridLayout
+                <LinearLayout
+                    android:id="@+id/banks_currencies_grid_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:columnCount="1">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1" />
-
-                        <TextView
-                            style="@style/TextAppearance.AppCompat.Medium"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:text="Ask"
-                            android:textColor="@android:color/black" />
-
-                        <TextView
-                            style="@style/TextAppearance.AppCompat.Medium"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:text="Bid"
-                            android:textColor="@android:color/black" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/banks_currencies_grid_container"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical" />
-                </GridLayout>
-            </LinearLayout>
+                    android:orientation="vertical" />
+            </GridLayout>
         </android.support.v7.widget.CardView>
+
     </LinearLayout>
 </ScrollView>
