--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/average_today"
         android:enabled="true"
-        android:icon="@drawable/ic_average_today_24dp"
+        android:icon="@drawable/ic_today"
         android:title="@string/average_today"
         app:showAsAction="ifRoom" />
     <item
@@ -16,7 +16,7 @@
     <item
         android:id="@+id/by_dates"
         android:enabled="true"
-        android:icon="@drawable/ic_by_dates_24dp"
+        android:icon="@drawable/ic_chart"
         android:title="@string/by_dates"
         app:showAsAction="ifRoom" />
 </menu>
