Progress bar in banks activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         <include
-            layout="@layout/toolbar_for_currencies" />
+            layout="@layout/toolbar_for_currencies"
+            />
 
         <include
             layout="@layout/toolbar_for_graph"/>
