--- a/app/src/main/res/layout/toolbar_for_currencies.xml
+++ b/app/src/main/res/layout/toolbar_for_currencies.xml
@@ -5,7 +5,7 @@
     android:paddingBottom="8dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:visibility="visible"
+    android:visibility="gone"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <View
