--- a/app/src/main/res/menu/fragment_menu.xml
+++ b/app/src/main/res/menu/fragment_menu.xml
@@ -5,7 +5,7 @@
     <item android:title="Item"
           android:id="@+id/action_exchange"
           android:icon="@drawable/currency_exchange"
-          app:showAsAction="always"
+          app:showAsAction="ifRoom"
           android:enabled="true"
           android:visible="true"/>
 </menu>
