--- a/app/src/main/res/layout/fragment_graph.xml
+++ b/app/src/main/res/layout/fragment_graph.xml
@@ -32,9 +32,7 @@
                 android:id="@+id/chart"
                 android:layout_width="match_parent"
                 android:layout_gravity="center"
-                android:layout_height="400dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp" />
+                android:layout_height="400dp" />
         </LinearLayout>
     </ScrollView>
 
